--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Automatizacion de la parte electrica de un generador con ATS<h1>
+    <h1> Automatizacion de la parte electrica de un generador con un ATS<h1>
 </body>
 </html>
